Fix up z-indexes

--- a/packages/core/ember/app/styles/flarum/layout.less
+++ b/packages/core/ember/app/styles/flarum/layout.less
@@ -64,7 +64,7 @@ body {
 	margin-right: 25px;
 
 	& .back {
-		z-index: 3; // z-index of an active .btn-group .btn is 2
+		z-index: 3 !important; // z-index of an active .btn-group .btn is 2
 		border-radius: @border-radius-base !important;
 		.transition(border-radius 0.2s);
 	}
